# diffraction

./: Cargo.toml  equations.txt  evaluations.txt
backend/: Cargo.toml
backend/src/: colour.rs  diffraction.rs  em_env.rs  fft.rs  lambda_zip.rs  lib.rs  repeat_until.rs
benches/: fft.rs
src/: fft.rs  line_renderer.rs  line_shader.wgsl  main.rs  norm_shader.wgsl  plot_element.rs  plot_renderer.rs  scene.rs  scene_element.rs  scene_renderer.rs  screen_element.rs  screen_renderer.rs  screen_shader.wgsl  spectrum_element.rs  spectrum_renderer.rs  wave_data.rs
src/plot/: element.rs  renderer.rs
src/scene/: element.rs  renderer.rs  ui_manager.rs
src/screen/: element.rs  mod.rs  screen_shader.wgsl
